[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/UI/InputDominos.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PumpkinNight-ZV8Bz.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="But_1" type="Button" parent="."]
margin_left = 119.0
margin_top = 468.0
margin_right = 166.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "1"

[node name="But_2" type="Button" parent="."]
margin_left = 185.0
margin_top = 468.0
margin_right = 232.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "2"

[node name="But_3" type="Button" parent="."]
margin_left = 249.0
margin_top = 468.0
margin_right = 296.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "3"

[node name="But_4" type="Button" parent="."]
margin_left = 312.0
margin_top = 467.0
margin_right = 359.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "4"

[node name="But_5" type="Button" parent="."]
margin_left = 378.0
margin_top = 467.0
margin_right = 425.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "5"

[node name="But_6" type="Button" parent="."]
margin_left = 444.0
margin_top = 467.0
margin_right = 491.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "6"

[node name="But_7" type="Button" parent="."]
margin_left = 507.0
margin_top = 467.0
margin_right = 554.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "7"

[node name="But_8" type="Button" parent="."]
margin_left = 571.0
margin_top = 467.0
margin_right = 618.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "8"

[node name="But_9" type="Button" parent="."]
margin_left = 632.0
margin_top = 467.0
margin_right = 679.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "9"

[node name="Enter" type="Button" parent="."]
margin_left = 700.0
margin_top = 466.0
margin_right = 777.0
margin_bottom = 519.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "ENTER"

[node name="Eliminate" type="Button" parent="."]
margin_left = 800.0
margin_top = 467.0
margin_right = 847.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "<----"

[node name="Input" type="RichTextLabel" parent="."]
margin_left = 445.0
margin_top = 241.0
margin_right = 660.0
margin_bottom = 281.0
custom_fonts/mono_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
script = ExtResource( 1 )

[node name="Warning" type="RichTextLabel" parent="."]
margin_left = 431.0
margin_top = 332.0
margin_right = 604.0
margin_bottom = 372.0
custom_fonts/normal_font = SubResource( 6 )

[connection signal="pressed" from="But_1" to="Input" method="_on_But_1_pressed"]
[connection signal="pressed" from="But_2" to="Input" method="_on_But_2_pressed"]
[connection signal="pressed" from="But_3" to="Input" method="_on_But_3_pressed"]
[connection signal="pressed" from="But_4" to="Input" method="_on_But_4_pressed"]
[connection signal="pressed" from="But_5" to="Input" method="_on_But_5_pressed"]
[connection signal="pressed" from="But_6" to="Input" method="_on_But_6_pressed"]
[connection signal="pressed" from="But_7" to="Input" method="_on_But_7_pressed"]
[connection signal="pressed" from="But_8" to="Input" method="_on_But_8_pressed"]
[connection signal="pressed" from="But_9" to="Input" method="_on_But_9_pressed"]
[connection signal="pressed" from="Enter" to="Input" method="_on_Enter_pressed"]
[connection signal="pressed" from="Eliminate" to="Input" method="_on_Eliminate_pressed"]
